--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "SViolence",
-  "name": "SViolence",
-  "description": "Farm SVY",
+  "short_name": "CACAO finance",
+  "name": "CACAO finance",
+  "description": "Farm CACAO",
   "icons": [
     {
       "src": "favicon.ico",
